	- use /etc/security/selinux/file_contexts instead.
	- selinux: ignore ENOTSUP return from lsetfilecon.
	- add sparcv8 and enable elf32/elf64 Zon sparc64 (#117302).
	- fix: --querybynumber looped.
	- fix: ENOTSUP filter from lsetfilecon borkage.
	- fix: increase file context regex parse buffer to BUFSIZ.
	- fix: handle elf64 note sections correctly.

4.2.1 -> 4.2.2:
	- unify signal handling in librpmio, use condvar to deliver signal.
	- make peace with libtool-1.5, autoconf-2.59, automake-1.8.
	- build with db-4.2.52 internal.
	- refresh bsddb.
	- detect (and remove) dbenv files while upgrading to db-4.2.52.
	- ensure that librpmdb links against just built, not system, librpmio.
	- fix: dangling pointer brain fart (#107835).
	- fix: ds.Single() method needs malloc'd elements (#109919).
	- convert ja and ko man pages to utf8 (#106050).
	- man page corrections (#106415).
	- perl.req typo (#106672).
	- fix: wrong package count for trigger scriptlet 1st arg (#100509).
	- fix: don't break header SHA1 if non-existent user/group (#97727).
	- remove fuids/fgids from rpmfi, easier to lookup fuser/fgroup instead.
	- merge sensible parts of openpkg rpm.patch.bugfix (#104780).
	- mark _javadocdir as documentation (#102898).
	- flush pipe before exit 1 in check-files (#103867).
	- perl.req: avoid regex misfire on '^use' in "= <<" assign (#109934).
	- find-debuginfo.sh: permit stripping unwritable by non-root (#112429).
	- missing build dependency (#111104).
	- spelling corrections (#112728).
	- popt: pad to display length, not strlen, for i18n popt args (#106240).
	- python: include Python.h before glibc features.h.
	- python: return [], not None, accessing header tags (#112794).
	- python: avoid invoking python to acquire ill-specified parameters.
	- add ia32e arch.
	- fix: sq->reaped needs sighold(SIGCHLD)/sigrelease(SIGCHLD) (#117620).

4.2 -> 4.2.1:
	- fix: nested %if handling, optind initialization posix vs. glibc.