@@ -33,6 +33,7 @@
 	- fix: ENOTSUP filter from lsetfilecon borkage.
 	- fix: increase file context regex parse buffer to BUFSIZ.
 	- fix: handle elf64 note sections correctly.
+	- fix: grrr, skip notes on non-i386 entirely.
 
 4.2.1 -> 4.2.2:
 	- unify signal handling in librpmio, use condvar to deliver signal.
